[metadata]
name = dpsched
version = 1.0
author = Tao Luo
author_email = tao.luo@columbia.edu
description = Discrete Event Simulation for Differential Privacy Budget Scheduling
long_description = file: README.md, LICENSE.txt
download_url = https://github.com/taoluo/privacy-budget-scheduling
license = Apache Software License (https://www.apache.org/licenses/LICENSE-2.0)
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache License 2.0
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering

[options]
packages = dpsched
;include_package_data = True
zip_safe = False
install_requires =
    dataclasses; python_version == "3.6"
    desmod
python_requires = >= 3.6

[options.extras_require]
plot = seaborn; notebook


;[options.package_data]
;desmod = py.typed

[bdist_wheel]
universal = 1

[tool:pytest]
;
;[flake8]
;max-line-length = 88
;ignore = D, E203, E501, W503
;exclude =
;    build/
;    dist/
;    pip-wheel-metadata/
;    docs/_build/
;    .*/
;    __pycache__
;    .mypy_cache
;
;[isort]
;force_grid_wrap = 0
;from_first = True
;include_trailing_comma = True
;line_length = 88
;multi_line_output = 3
;use_parentheses = True
;skip_glob = .*
;known_third_party =
;    colorama
;    progressbar
;    simpy>=4
;    vcd
;    yaml
;    desmod
;
;[mypy]
;files = desmod
;python_version = 3.6
;show_error_codes = True
;
;[mypy-colorama]
;ignore_missing_imports = True

;[mypy-progressbar]
;ignore_missing_imports = True
;
;[mypy-vcd.*]
;ignore_missing_imports = True
